WIP: fixed horizontal scroll with modify content margin/padding

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -80,7 +80,7 @@
 
         h2 {
             margin: 0;
-            padding: 0 6rem 0 2rem;
+            padding: 0 12rem 0 8rem;
         }
 
         h3 {
@@ -102,6 +102,7 @@
             text-indent: 1rem;
 
             & strong span {
+                text-indent: 0;
                 color: $color-cover;
                 background: $color-span-bg;
             }
