--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,32 +13,18 @@
 body {
   font-family: $font-family;
   width: 100%;
-  max-height: 100vh;
+  // max-height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  writing-mode: vertical-rl;
   background: $color-bg;
+  writing-mode: vertical-rl;
   // @include writing-mode(rl);
   // @include font-feature-settings('palt');
   overflow-x: scroll;
   overflow-y: hidden;
-
-  &::-webkit-scrollbar {
-    height: 6px;
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #656565;
-  }
-
-  &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(120, 120, 120, 0.2);
-    background: #252525;
-  }
 }
 
 h1,
@@ -68,8 +54,26 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: max-content;
   height: calc(var(--vh, 1vh) * 100);
   position: relative;
+  writing-mode: vertical-rl;
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  &::-webkit-scrollbar {
+    height: 6px;
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #656565;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(120, 120, 120, 0.2);
+    background: #252525;
+  }
 
   &-content {
     min-width: 100vw;
